fixing java 11 compatibility issues
Signed-off-by: Aaron Alvarez <aaarone@amazon.com>